feat:  add tailwind support

--- a/view/cases/hello.templ
+++ b/view/cases/hello.templ
@@ -2,7 +2,7 @@ package hello
 
 templ View(name string) {
 	if name == "" {
-		<div>Hello!</div>
+		<div class="bg-red-500">Hello!</div>
 	} else {
 		<div>Hello, { name }!</div>
 	}
