--- a/view/layouts/base.templ
+++ b/view/layouts/base.templ
@@ -14,6 +14,7 @@ templ Base(name string) {
 			<!-- TODO: Add basic header information, create a component to add openGraph and other stuf -->
 			<!-- Add defer if HTMX is not going to be used at the beginning when the page has been loaded This will remove the block of the script and render the HTML content a bit faster -->
 			<script src="/assets/htmx"></script>
+			<link rel="stylesheet" href="/assets/tailwind"/>
 		</head>
 		<body>
 			@hello.View(name)
