--- a/assets/css/tailwindcss/tailwind.css
+++ b/assets/css/tailwindcss/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .markdown h1 {
+    @apply font-bold bg-red-700;
+  }
+}
