wip: get language from accept-language request header

--- a/view/cases/hello/hello.templ
+++ b/view/cases/hello/hello.templ
@@ -2,7 +2,7 @@ package hello
 
 import "github.com/carseven/go-fullstack-template/languages"
 
-templ View(name string, userLanguage string) {
+templ View(name string, userLanguage []string) {
 	<h1>Version </h1>
 	if name == "" {
 		<div class="bg-red-500">{ languages.GetKeyTranslation("HELLO", userLanguage) }!</div>
