--- a/view/cases/hello/hello.templ
+++ b/view/cases/hello/hello.templ
@@ -3,9 +3,9 @@ package hello
 import "github.com/carseven/go-fullstack-template/languages"
 
 templ View(name string, userLanguage []string) {
-	<h1>Version </h1>
+	<h1 class="font-sans text-3xl">Hello page!</h1>
 	if name == "" {
-		<div class="bg-red-500">{ languages.GetKeyTranslation("HELLO", userLanguage) }!</div>
+		<p class="text-2xl font-sans">{ languages.GetKeyTranslation("HELLO", userLanguage) }!</p>
 	} else {
 		<div>{ languages.GetKeyTranslation("HELLO", userLanguage) }, { name }!</div>
 	}
