--- a/view/layouts/base.templ
+++ b/view/layouts/base.templ
@@ -38,7 +38,57 @@ script loadDevServer() {
 
 }
 
-templ Base(component templ.Component, environment string) {
+script checkColorSchemaPreference() {
+	// On page load or when changing themes, best to add inline in `head` to avoid FOUC
+    if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark');
+    } else {
+        document.documentElement.classList.remove('dark')
+    }
+}
+
+script handleColoSchemaSwitcher() {
+	var themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
+	var themeToggleLightIcon = document.getElementById('theme-toggle-light-icon');
+
+	// Change the icons inside the button based on previous settings
+	if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+		themeToggleLightIcon.classList.remove('hidden');
+	} else {
+		themeToggleDarkIcon.classList.remove('hidden');
+	}
+
+	var themeToggleBtn = document.getElementById('theme-toggle');
+	themeToggleBtn.addEventListener('click', function() {
+
+		// toggle icons inside button
+		themeToggleDarkIcon.classList.toggle('hidden');
+		themeToggleLightIcon.classList.toggle('hidden');
+
+		// if set via local storage previously
+		if (localStorage.getItem('color-theme')) {
+			if (localStorage.getItem('color-theme') === 'light') {
+				document.documentElement.classList.add('dark');
+				localStorage.setItem('color-theme', 'dark');
+			} else {
+				document.documentElement.classList.remove('dark');
+				localStorage.setItem('color-theme', 'light');
+			}
+
+		// if NOT set via local storage previously
+		} else {
+			if (document.documentElement.classList.contains('dark')) {
+				document.documentElement.classList.remove('dark');
+				localStorage.setItem('color-theme', 'light');
+			} else {
+				document.documentElement.classList.add('dark');
+				localStorage.setItem('color-theme', 'dark');
+			}
+		}
+	});
+}
+
+templ Base(component templ.Component, navbar templ.Component, footer templ.Component, environment string) {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
@@ -50,15 +100,18 @@ templ Base(component templ.Component, environment string) {
 			<!-- TODO: Add basic header information, create a component to add openGraph and other stuf -->
 			<!-- Add defer if HTMX is not going to be used at the beginning when the page has been loaded This will remove the block of the script and render the HTML content a bit faster -->
 			<script src="/assets/htmx"></script>
-			<script src="/assets/hls"></script>
-			<script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
+			@checkColorSchemaPreference()
 			if environment == "DEV" {
 				@loadDevServer()
 			}
 			<link rel="stylesheet" href="/assets/tailwind"/>
+			// TODO: Add from npm i <script src="../path/to/flowbite/dist/flowbite.min.js"></script> or just
+			<script defer src="/assets/flowbite"></script>
 		</head>
-		<body>
+		<body class="bg-white dark:bg-black" onload={ handleColoSchemaSwitcher() }>
+			@navbar
 			@component
+			@footer
 		</body>
 	</html>
 }
